# docs/swagger.json
@@ -21,38 +21,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/profile": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Ejemplo de una ruta que requiere autenticación JWT.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "protected"
-                ],
-                "summary": "Acceder a una ruta protegida",
-                "responses": {
-                    "200": {
-                        "description": "Acceso concedido.",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ProtectedResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "No autorizado.",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/google/callback": {
+        "/api/v1/auth/google/callback": {
             "get": {
                 "description": "Procesa el callback de Google después de la autenticación del usuario. Crea un nuevo usuario o inicia sesión en un usuario existente, devolviendo un token JWT.",
                 "produces": [
@@ -99,7 +68,7 @@
                 }
             }
         },
-        "/auth/google/link": {
+        "/api/v1/auth/google/link": {
             "post": {
                 "description": "Verifica la contraseña del usuario y vincula su cuenta de Google usando un código de autorización de Google.",
                 "consumes": [
@@ -157,7 +126,7 @@
                 }
             }
         },
-        "/auth/google/login": {
+        "/api/v1/auth/google/login": {
             "get": {
                 "description": "Redirige al usuario a la página de consentimiento de Google OAuth2.",
                 "tags": [
@@ -171,7 +140,7 @@
                 }
             }
         },
-        "/login": {
+        "/api/v1/login": {
             "post": {
                 "description": "Autentica a un usuario y devuelve un token JWT si el inicio de sesión es exitoso.",
                 "consumes": [
@@ -223,7 +192,38 @@
                 }
             }
         },
-        "/register": {
+        "/api/v1/profile": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Ejemplo de una ruta que requiere autenticación JWT.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "protected"
+                ],
+                "summary": "Acceder a una ruta protegida",
+                "responses": {
+                    "200": {
+                        "description": "Acceso concedido.",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ProtectedResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "No autorizado.",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/register": {
             "post": {
                 "description": "Crea una nueva cuenta de usuario utilizando su email y una contraseña elegida.",
                 "consumes": [
